# NavTradeV1

./: .gitignore  QUICKSTART.md  README.md  SETUP_FIX.md  process_all.py  process_from_config.py  pyproject.toml  run.sh  simple_tracker.py
backend/: config.py  config_sheet_processor.py  document_downloader.py  input_folder_processor.py  main.py  old_main.py  processor.py  simple_cache.py  utils.py
backend/converters/: __init__.py  docx_to_pdf.py  html_to_pdf.py  markdown_to_chunks.py  pdf_to_markdown.py
backend/models/: __init__.py  schemas.py
data/chunks/: 2203312_Project Statement Submission (1).json  Appendix-I-updated (1).json  ExportImportRestrictions.json
data/input/: 2203312_Project Statement Submission (1).docx  ExportImportRestrictions.html
data/markdown/: 2203312_Project Statement Submission (1).md  Appendix-I-updated (1).md  ExportImportRestrictions.md
frontend/: chat.py  compare.py
